feat: add foreman, author views, update post show container to render error msg

--- a/app/javascript/packs/src/components/Containers/PostShowContainer/PostShowContainer.module.scss
+++ b/app/javascript/packs/src/components/Containers/PostShowContainer/PostShowContainer.module.scss
@@ -5,7 +5,7 @@
   grid-column: 1/3;
   margin-right: 45px;
   overflow: hidden;
-  max-width: 723px;
+  min-width: 54vw;
 }
 .Title{
   @include PostTitle;
