feat: add custom headings

--- a/app/javascript/packs/src/components/Containers/RTE/RTE.scss
+++ b/app/javascript/packs/src/components/Containers/RTE/RTE.scss
@@ -41,8 +41,29 @@ trix-toolbar {
     font-size: 18px;
     text-indent: 0px;
   }
+  .trix-button--icon-heading-2::before {
+    background: none;
+    content: 'H2';
+    line-height: 26px;
+    font-size: 18px;
+    text-indent: 0px;
+  }
+  .trix-button--icon-heading-3::before {
+    background: none;
+    content: 'H3';
+    line-height: 26px;
+    font-size: 18px;
+    text-indent: 0px;
+  }
+  .trix-button--icon-heading-4::before {
+    background: none;
+    content: 'H4';
+    line-height: 26px;
+    font-size: 18px;
+    text-indent: 0px;
+  }
   //
-  .trix-button--icon.trix-button--icon-heading-1:disabled::before {
+  .trix-button--icon[class*="trix-button--icon-heading"]:disabled::before {
     opacity: 1;
   }
 }
