--- a/app/javascript/packs/src/components/UI/Header/Header.module.scss
+++ b/app/javascript/packs/src/components/UI/Header/Header.module.scss
@@ -17,6 +17,7 @@
   align-items: center;
   font-size: 20px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  list-style: none;
 }
 
 .Header li {
