--- a/app/javascript/packs/src/components/UI/Main/Main.module.scss
+++ b/app/javascript/packs/src/components/UI/Main/Main.module.scss
@@ -2,7 +2,7 @@
   padding: 30px 0 60px 0;
   grid-row: 2/3;
   display: grid;
-  grid-template-columns: auto 33vw 25vw;
+  grid-template-columns: 15vw 40vw 30vw;
   background-color: #EEF0F1;
   justify-content: center;
 }
