--- a/app/javascript/packs/src/components/UI/Footer/Footer.module.scss
+++ b/app/javascript/packs/src/components/UI/Footer/Footer.module.scss
@@ -7,6 +7,11 @@
   display: grid;
   grid-template: 1fr 1fr auto / repeat(3, 1fr);
   background-color: $background-main;
+  ul{
+    padding: 20px;
+    margin: 0;
+    list-style: none;
+  }
 }
 .Footer .block{
   color: #eee;
@@ -22,11 +27,6 @@
   }
   h2{
     margin-bottom: 0;
-  }
-  ul{
-    padding: 20px;
-    margin: 0;
-    list-style: none;
   }
   ul li{
     font-size: 20px;
@@ -49,7 +49,7 @@
     transition: filter .2s ease-in;
     &:hover{
       transition: filter .1s ease-in;
-      filter: drop-shadow(0px 0px 3px #FFC300);
+      filter: drop-shadow(0px 0px 2px #ffc815);
     }
   }
   a img{
