--- a/app/javascript/packs/src/components/UI/Placeholder/ImagePlaceholder/ImagePlaceholder.module.scss
+++ b/app/javascript/packs/src/components/UI/Placeholder/ImagePlaceholder/ImagePlaceholder.module.scss
@@ -1,6 +1,9 @@
 @import '../Placeholder.module.scss';
 
+.WrapImagePlaceholder{
+  margin: 20px;
+}
+
 .ImagePlaceholder{
   @include Placeholder();
-  margin: 20px;
 }
