--- a/app/javascript/packs/src/components/UI/Placeholder/Placeholder.module.scss
+++ b/app/javascript/packs/src/components/UI/Placeholder/Placeholder.module.scss
@@ -1,4 +1,11 @@
 @mixin Placeholder{
   background-color: #cdcdcd;
   border-radius: 6px;
+  animation: glow 1s cubic-bezier(0.6, -0.28, 0.735, 0.045) infinite;
+}
+
+@keyframes glow {
+  0%{ opacity: 1; }
+  70%{ opacity: .5;}
+  100%{ opacity: 1;}
 }
