--- a/app/javascript/packs/src/assets/shared/Common.scss
+++ b/app/javascript/packs/src/assets/shared/Common.scss
@@ -57,3 +57,17 @@ $color-aux: #eee;
     transition: .1s ease-out;
   }
 }
+@keyframes Pulsating {
+  0%   {transform: scale(1)}
+  50%  {transform: scale(1.5)}
+  100% {transform: scale(1)}
+}
+.LoadingDot{
+  border-radius: 50%;
+  background-color: #aaa;
+  display: inline-block;
+  width:  10px;
+  height: 10px;
+  animation: Pulsating 800ms infinite ease-in-out;
+  margin: 5px 8px;
+}
