--- a/app/javascript/packs/src/components/Containers/WeeklyFeedContainer/WeeklyBlock/WeeklyBlock.module.scss
+++ b/app/javascript/packs/src/components/Containers/WeeklyFeedContainer/WeeklyBlock/WeeklyBlock.module.scss
@@ -1,3 +1,5 @@
+@import '../../../../assets/shared/Common.scss';
+
 .WeeklyBlock{
   border: 1px solid #C6C9D2;
   border-radius: 10px;
@@ -21,6 +23,7 @@
 .FeedPosts{
   padding: 0;
   margin: 0;
+  list-style: none;
 }
 .FeedPost{
   display: block;
