feat: add login mechanism to be able to edit and create new post

--- a/app/javascript/packs/src/App.module.scss
+++ b/app/javascript/packs/src/App.module.scss
@@ -1,3 +1,7 @@
+* {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+}
 .Layout{
   display: grid;
   grid-template-rows: auto minmax(90vh, auto) auto;
