--- a/app/javascript/packs/src/components/UI/Header/Header.module.scss
+++ b/app/javascript/packs/src/components/UI/Header/Header.module.scss
@@ -32,14 +32,22 @@
   }
 }
 
-.Header .SignUp{
+.Header .SignOut{
   padding: 8px 10px 9px 10px;
   background-color: #ffc300;
   border-radius: 3px;
-  & a {
-    color: $background-main;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  font-size: 15px;
+  position: relative;
+  top: 2px;
+  &:hover{
+    background-color: #d3a200;
   }
-  & a:hover {
-    text-decoration: none;
+  &:active{
+    border-color: #2b2b2b;
+    background-color: #b18700;
+    color: rgb(167, 167, 167);
   }
 }
