--- a/app/javascript/packs/src/assets/shared/Common.scss
+++ b/app/javascript/packs/src/assets/shared/Common.scss
@@ -12,6 +12,7 @@ $color-aux: #eee;
   background-color: white;
 }
 @mixin PostTitle{
+  font-family: Arial, Helvetica, sans-serif;
   font-weight: bolder;
   color: #4e4e4e;
   display: block;
@@ -23,6 +24,8 @@ $color-aux: #eee;
 }
 @mixin EditorContent{
   pre{
+    // background-color: #ceeaea;
+    background-color: #def3f3;
     padding: 16px;
     font-size: 14px;
   }
@@ -33,6 +36,23 @@ $color-aux: #eee;
   }
   h1, h2, h3, h4, h5, h6 {
     color: #3b3b3b;
+  }
+  blockquote {
+    background: #2d2d2d;
+    margin: 1.5em;
+    padding: 1.5em 1.5em;
+    border-radius: 10px;
+    border-radius: 6px;
+    word-break: break-all;
+    font-style: italic;
+    font-weight: normal;
+    color: #e7e7e7;
+  }
+  pre{
+    white-space: normal;
+  }
+  a {
+    @extend %Link;
   }
 }
 .btn {
@@ -117,4 +137,14 @@ button[type='submit'] {
     color: #ddd;
   }
   box-shadow: 0px 3px 4px #ccc;
+}
+
+%Link {
+  color: #569CD6;
+  &:hover{
+    color: #4c89bb;
+  }
+  &:active{
+    color: #3d6f97;
+  }
 }
